# zkfold-prover

./: .gitignore  README.md  Setup.hs  cabal.project  hie.yaml  run.sh  zkfold-prover.cabal
.github/workflows/: main-pull.yml  main-push.yml
bench/: BenchMSM.hs  BenchPolyDiv.hs  BenchPolyMul.hs  BenchProve.hs
haskell-wrapper/: Main.hs  haskell-wrapper.cabal
haskell-wrapper/src/: Class.hs  Conversion.hs  Functions.chs  Pack.hs  Poly.hs  RustBLS.hs  RustFunctions.hs  Types.hs
haskell-wrapper/src/BN254/: BN254.hs
haskell-wrapper/tests/: FFT.hs  Main.hs  MultiScalarMultiplication.hs  ScalarSum.hs
rust-wrapper/: Cargo.toml  genheader.sh
rust-wrapper/benches/: div_bench.rs  div_fft_bench.rs  fft_bench.rs  msm_bench.rs  mul_fft_bench.rs
rust-wrapper/src/: fft.rs  lib.rs  msm.rs  point.rs  poly.rs  scalar.rs  scale.rs  sum.rs  utils.rs
