cabal-version:      3.0
name:               haskell-wrapper
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             ZkFold
maintainer:         info@zkfold.io
category:           Network
build-type:         Simple
extra-doc-files:    CHANGELOG.md

custom-setup
  setup-depends:       
      base
    , Cabal
    , process

Flag Pedantic
    Description: Enable pedantic build with -Werror
    Manual: True
    Default: False

common options
    default-language: Haskell2010
    ghc-options:
      -fwarn-redundant-constraints
      -Wall
      -Wcompat
      -Widentities
      -Wincomplete-record-updates
      -Wincomplete-uni-patterns
      -Wnoncanonical-monad-instances
      -Wpartial-fields
      -Wredundant-constraints
      -O2
      -threaded
    if flag(pedantic)
      ghc-options:
        -Werror
    default-extensions:
      BangPatterns,
      BinaryLiterals,
      ConstraintKinds,
      DataKinds,
      DefaultSignatures,
      DeriveDataTypeable,
      DeriveFoldable,
      DeriveFunctor,
      DeriveGeneric,
      DeriveTraversable,
      ExistentialQuantification,
      FlexibleContexts,
      FlexibleInstances,
      FunctionalDependencies,
      GADTs,
      GeneralizedNewtypeDeriving,
      InstanceSigs,
      KindSignatures,
      LambdaCase,
      MultiParamTypeClasses,
      MultiWayIf,
      NamedFieldPuns,
      NoImplicitPrelude,
      NoStarIsType,
      NumericUnderscores,
      OverloadedStrings,
      OverloadedLabels,
      PolyKinds,
      RankNTypes,
      RecordWildCards,
      ScopedTypeVariables,
      StandaloneDeriving,
      StandaloneKindSignatures,
      TupleSections,
      TypeApplications,
      TypeFamilies,
      ViewPatterns


library
  import: options
  exposed-modules:
      Functions
    , RustFunctions
    , BN254.BN254
  hs-source-dirs:
      haskell-wrapper/src
  build-depends:
    , base >= 4.16
    , bytestring
    , foreign-rust
    , zkfold-base
    , vector
    , binary
  ghc-options:
    -O2
  build-tool-depends:
      c2hs:c2hs
  pkgconfig-depends:
      rust_wrapper-uninstalled

test-suite wrapper-test
  import: options
  main-is: Main.hs
  type: exitcode-stdio-1.0
  hs-source-dirs: haskell-wrapper/tests
  other-modules: 
    ScalarSum
    MultiScalarMultiplication  
    FFT
  build-depends:
    , base >= 4.16
    , zkfold-base
    , haskell-wrapper
    , hspec                                < 2.12
    , QuickCheck
    , vector

benchmark msm
    import:           options
    main-is:          BenchMSM.hs
    hs-source-dirs:   bench
    type:             exitcode-stdio-1.0
    ghc-options:      
      -rtsopts
      -fprof-auto
    build-depends: 
      base, 
      tasty-bench,
      QuickCheck,
      vector,
      zkfold-base,
      bytestring,
      haskell-wrapper

benchmark prove
    import:           options
    main-is:          BenchProve.hs
    hs-source-dirs:   bench
    type:             exitcode-stdio-1.0
    ghc-options:      
      -rtsopts
      -fprof-auto
    build-depends: 
      base, 
      tasty-bench,
      QuickCheck,
      vector,
      zkfold-base,
      bytestring,
      haskell-wrapper

benchmark poly-mul
    import:           options
    main-is:          BenchPolyMul.hs
    hs-source-dirs:   bench
    type:             exitcode-stdio-1.0
    ghc-options:      
      -rtsopts
      -fprof-auto
    build-depends: 
      base, 
      tasty-bench,
      QuickCheck,
      vector,
      zkfold-base,
      bytestring,
      haskell-wrapper,
      random,
      deepseq