cabal-version:      3.0
name:               zkfold-prover
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             ZkFold
maintainer:         info@zkfold.io
category:           Network
build-type:         Custom

custom-setup
  setup-depends:       
      base
    , Cabal
    , process
    , directory
    , pseudomacros

Flag Pedantic
    Description: Enable pedantic build with -Werror
    Manual: True
    Default: False

common options
    default-language: Haskell2010
    ghc-options:
      -fwarn-redundant-constraints
      -Wall
      -Wcompat
      -Widentities
      -Wincomplete-record-updates
      -Wincomplete-uni-patterns
      -Wnoncanonical-monad-instances
      -Wpartial-fields
      -Wredundant-constraints
      -O2
      -threaded
    if flag(pedantic)
      ghc-options:
        -Werror
    default-extensions:
      BangPatterns,
      BinaryLiterals,
      ConstraintKinds,
      DataKinds,
      DefaultSignatures,
      DeriveDataTypeable,
      DeriveFoldable,
      DeriveFunctor,
      DeriveGeneric,
      DeriveTraversable,
      ExistentialQuantification,
      FlexibleContexts,
      FlexibleInstances,
      FunctionalDependencies,
      GADTs,
      GeneralizedNewtypeDeriving,
      InstanceSigs,
      KindSignatures,
      LambdaCase,
      MultiParamTypeClasses,
      MultiWayIf,
      NamedFieldPuns,
      NoImplicitPrelude,
      NoStarIsType,
      NumericUnderscores,
      OverloadedStrings,
      OverloadedLabels,
      PolyKinds,
      RankNTypes,
      RecordWildCards,
      ScopedTypeVariables,
      StandaloneDeriving,
      StandaloneKindSignatures,
      TupleSections,
      TypeApplications,
      TypeFamilies,
      ViewPatterns


library
  import: options
  exposed-modules:
      RustFunctions
    , RustBLS
    , Conversion
    , Types
    , Poly
  hs-source-dirs:
      haskell-wrapper/src
  build-depends:
    , base >= 4.16
    , bytestring
    , symbolic-base
    , vector
    , binary
    , unix
    , deepseq
    , QuickCheck
  ghc-options:
    -O2

-- test-suite wrapper-test
--   import: options
--   main-is: Main.hs
--   type: exitcode-stdio-1.0
--   hs-source-dirs: haskell-wrapper/tests
  -- other-modules: 
    -- MultiScalarMultiplication  
    -- FFT
  -- build-depends:
  --   , base >= 4.16
  --   , symbolic-base
  --   , zkfold-prover
  --   , hspec                                < 2.12
  --   , QuickCheck
  --   , vector
  --   , vector-algorithms
  --   , bytestring

-- benchmark msm
--     import:           options
--     main-is:          BenchMSM.hs
--     hs-source-dirs:   bench
--     type:             exitcode-stdio-1.0
--     ghc-options:      
--       -rtsopts
--       -fprof-auto
--     build-depends: 
--       base, 
--       tasty-bench,
--       QuickCheck,
--       vector,
--       symbolic-base,
--       bytestring,
--       zkfold-prover

benchmark prove
    import:           options
    main-is:          BenchProve.hs
    hs-source-dirs:   bench
    type:             exitcode-stdio-1.0
    ghc-options:      
      -rtsopts
      -fprof-auto
    build-depends: 
      base, 
      tasty-bench,
      QuickCheck,
      vector,
      symbolic-base,
      bytestring,
      zkfold-prover,
      adjunctions,
      binary

-- benchmark poly-mul
--     import:           options
--     main-is:          BenchPolyMul.hs
--     hs-source-dirs:   bench
--     type:             exitcode-stdio-1.0
--     ghc-options:      
--       -rtsopts
--       -fprof-auto
--     build-depends: 
--       base, 
--       tasty-bench,
--       QuickCheck,
--       vector,
--       symbolic-base,
--       bytestring,
--       zkfold-prover,
--       random,
--       deepseq,
--       adjunctions,
--       binary

-- benchmark poly-div
--     import:           options
--     main-is:          BenchPolyDiv.hs
--     hs-source-dirs:   bench
--     type:             exitcode-stdio-1.0
--     ghc-options:      
--       -rtsopts
--       -fprof-auto
--     build-depends: 
--       base, 
--       tasty-bench,
--       QuickCheck,
--       vector,
--       symbolic-base,
--       bytestring,
--       zkfold-prover,
--       random,
--       deepseq,
--       extra