cabal-version:      3.0
name:               haskell-wrapper
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             ZkFold
maintainer:         info@zkfold.io
category:           Network
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common common-extensions
  default-extensions:
    ForeignFunctionInterface
    DataKinds
    DeriveAnyClass
    DerivingStrategies
    DerivingVia
    TypeFamilies
    UndecidableInstances
    TypeOperators
    ScopedTypeVariables
    TypeApplications
    AllowAmbiguousTypes

library
  import: common-extensions
  exposed-modules:
      Functions
    , Pack
    , RustFunctions
  hs-source-dirs:
      src
  build-depends:
    , base >= 4.16
    , aeson
    , borsh
    , bytestring
    , foreign-rust
    , generics-sop
    , text
    , zkfold-base
  build-tool-depends:
      c2hs:c2hs
  pkgconfig-depends:
      rust_wrapper-uninstalled

executable demo
  import: common-extensions
  main-is:
      Main.hs
  build-depends:
    , base >= 4.16
    , haskell-wrapper
    , foreign-rust
    , zkfold-base
  pkgconfig-depends:
      rust_wrapper-uninstalled

test-suite wrapper-test
  import: common-extensions
  main-is: Main.hs
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  other-modules: 
    ScalarSum
    MultiScalarMultiplication  
  build-depends:
    , base >= 4.16
    , foreign-rust
    , zkfold-base
    , bytestring
    , haskell-wrapper
    , hspec                                < 2.12
    , QuickCheck