[package]
name = "rust-wrapper"
version = "0.1.0"
edition = "2021"

[dependencies]
# Crate arkmsm uses arkworks 0.3.0, it is not compatible with version 0.4.0. 
# We are using an unofficial fork of the repository, which updates the version to 0.4.0. 
# We need to check the status of arkmsm to move to a stable version.
ark-msm = { git = "https://github.com/TalDerei/arkmsm.git", rev="bc95ea3784983d8ced03a642d765bbfdd91faa9b"}

ark-ff = { version= "0.4.0", default-features = false }
ark-ec = { version= "0.4.0" }
ark-std = { version = "0.4.0", default-features = false }
ark-serialize = { version = "0.4.0", default-features = false }
ark-bls12-381 = { version = "0.4.0" }
der            = "0.7"
rand           = "0.8"
num-bigint     = "0.4.6"
num-traits     = "0.2.19"
libc           = "0.2.158"
ark-poly       = "0.4.2"
ark-test-curves = "0.4.2"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "msm_bench"
harness = false

[[bench]]
name = "fft_bench"
harness = false

[features]
capi = []
